--- a/css/index.css
+++ b/css/index.css
@@ -130,6 +130,42 @@ table {
 
 /* Enter Custom CSS Below */
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: Raleway;
+  color: white;
+  overflow: hidden;
+}
+
+.content {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  padding-top: 20%;
+  padding-right: 40px;
+  z-index: 2;
+  font-family: Raleway;
+  color: white;
+}
+
+.content h1 {
+  font-size: 9vw;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+.content h2 {
+  font-size: 3vw;
+  font-weight: 400;
+  font-variant: small-caps;
+  letter-spacing: 0.01rem;
+}
+
 /* ---- particles.js container ---- */
 #particles-js {
   position: absolute;
@@ -140,6 +176,7 @@ table {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+  z-index: 1;
 } /* ---- stats.js ---- */
 .count-particles {
   background: #000022;
@@ -171,28 +208,4 @@ table {
 }
 .count-particles {
   border-radius: 0 0 3px 3px;
-}
-
-.content {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  padding-top: 20%;
-  padding-right: 40px;
-  z-index: 2;
-  font-family: Raleway;
-  color: white;
-}
-
-.content h1 {
-  font-size: 9vw;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-}
-
-.content h2 {
-  font-size: 3vw;
-  font-weight: 400;
-  font-variant: small-caps;
-  letter-spacing: 0.01rem;
 }
