--- a/css/index.css
+++ b/css/index.css
@@ -130,40 +130,20 @@ table {
 
 /* Enter Custom CSS Below */
 
-html,
-body {
-  width: 100%;
-  height: 100%;
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: Raleway;
-  color: white;
-  overflow: hidden;
-}
-
-.content {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  padding-top: 20%;
-  padding-right: 40px;
-  z-index: 2;
-  font-family: Raleway;
-  color: white;
-}
-
-.content h1 {
-  font-size: 9vw;
-  font-weight: 400;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-}
-
-.content h2 {
-  font-size: 3vw;
-  font-variant: small-caps;
-  letter-spacing: 0.01rem;
 }
 
 /* ---- particles.js container ---- */
@@ -175,37 +155,49 @@ body {
   background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 50% 50%;
+  background-position: 100%;
   z-index: 1;
-} /* ---- stats.js ---- */
-.count-particles {
-  background: #000022;
+}
+
+.landing-content {
   position: absolute;
-  top: 48px;
-  left: 0;
-  width: 80px;
-  color: #13e8e9;
-  font-size: 0.8em;
-  text-align: left;
-  text-indent: 4px;
-  line-height: 14px;
-  padding-bottom: 2px;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  padding-top: 20%;
+  padding-right: 40px;
+  z-index: 2;
+  font-family: Raleway;
+  color: white;
 }
-.js-count-particles {
-  font-size: 1.1em;
+
+.landing-content h1 {
+  font-size: 5vw;
+  font-weight: 400;
+  letter-spacing: 3px;
+  text-transform: uppercase;
 }
-#stats,
-.count-particles {
-  -webkit-user-select: none;
-  margin-top: 5px;
-  margin-left: 5px;
+
+.landing-content h2 {
+  font-size: 3vw;
+  font-weight: 200;
+  font-variant: small-caps;
+  letter-spacing: 0.01rem;
 }
-#stats {
-  border-radius: 3px 3px 0 0;
-  overflow: hidden;
+
+.redirect {
+  padding: 20px;
+  margin: 5px;
+  font-size: 28px;
+  text-align: center;
+  background-color: transparent;
+  color: #706f6f;
+  border-color: #85bdbf;
+  border-radius: 8px;
+  transition: all 0.5s;
+  cursor: pointer;
 }
-.count-particles {
-  border-radius: 0 0 3px 3px;
+
+.redirect:hover {
+  color: azure;
+  background-color: #85bdbf;
 }
